Bug 77386 - crash: gen7_mfd.c:1440: gen7_mfd_vc1_pic_state: Assertion `0' failed.
Summary: crash: gen7_mfd.c:1440: gen7_mfd_vc1_pic_state: Assertion `0' failed.
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: low normal
Assignee: haihao
QA Contact: Sean V Kelley
URL: https://dl.dropboxusercontent.com/u/6...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-13 07:44 UTC by Kevin Mitchell
Modified: 2014-05-06 14:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
output of mpv -v --no-config --hwdec=vaapi --vo=vaapi Continuum_Season_Two_\(Disc_1\)_t13.mkv (6.92 KB, text/plain)
2014-04-13 07:44 UTC, Kevin Mitchell
Details

Description Kevin Mitchell 2014-04-13 07:44:25 UTC
Created attachment 97293 [details]
output of mpv -v --no-config --hwdec=vaapi --vo=vaapi  Continuum_Season_Two_\(Disc_1\)_t13.mkv

With mpv (both latest release 0.3.7 and git master), using hardware decoding on the clip found at the "url" for this issue results in the error message in the summary followed by a crash back to the command line. 

both native vaapi output:
mpv --no-config --hwdec=vaapi --vo=vaapi Continuum_Season_Two_\(Disc_1\)_t13.mkv
and opengl interpo:
mpv --no-config --hwdec=vaapi --vo=opengl Continuum_Season_Two_\(Disc_1)_t13.mkv
exhibit the same behaviour.  

This appears to be unique to this clip. Most other clips work fine. 

I'm on Ivybridge with libva/intel-driver 1.3.0.
Comment 1 haihao 2014-04-14 08:27:11 UTC
It is a known issue: the driver doesn't support interlaced VC-1 video.
Comment 2 Kevin Mitchell 2014-05-04 09:37:07 UTC
I understand if this is a low priority feature, but is there a reason that it has to abort here? Would a patch for returning an error status be welcome?
Comment 3 haihao 2014-05-05 00:21:13 UTC
Yes, we will remove the assert(). 

Thanks
Comment 4 haihao 2014-05-05 08:26:40 UTC
return error instead of assert() and the driver won't support interlaced VC-1 in a short time
Comment 5 Kevin Mitchell 2014-05-06 14:58:31 UTC
Works great. Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.